[gd_scene load_steps=64 format=3 uid="uid://cpv167v11ths8"]

[ext_resource type="Shader" uid="uid://chvg7tt7fvn81" path="res://Shaders/flash.gdshader" id="1_4hwy0"]
[ext_resource type="Script" uid="uid://be7kx1du2u7i6" path="res://Scripts/archer.gd" id="2_183pt"]
[ext_resource type="Texture2D" uid="uid://behqb8xghkxue" path="res://Assets/Characters/Characters(100x100)/Skeleton Archer/Skeleton Archer/Skeleton Archer.png" id="3_nd4ig"]
[ext_resource type="Texture2D" uid="uid://wxgkky5poraf" path="res://Assets/Characters/Characters(100x100)/Skeleton/Skeleton/Skeleton.png" id="4_gecj3"]
[ext_resource type="Texture2D" uid="uid://pmeowwd68m1i" path="res://Assets/Characters/Characters(100x100)/Armored Skeleton/Armored Skeleton/Shadow sprites/Armored Skeleton-Shadow.png" id="5_2yfd0"]
[ext_resource type="Texture2D" uid="uid://blopey63jbrkb" path="res://Assets/Characters/Characters(100x100)/Skeleton/Skeleton/Shadow sprites/Skeleton-Shadow_death.png" id="6_ex5m4"]
[ext_resource type="PackedScene" uid="uid://d32wmlan6l876" path="res://Scenes/Projectiles/arrow.tscn" id="7_183pt"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xhj3x"]
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3je14"]
width = 1000
height = 1000
noise = SubResource("FastNoiseLite_xhj3x")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p5226"]
resource_local_to_scene = true
shader = ExtResource("1_4hwy0")
shader_parameter/whiteness = 0.0
shader_parameter/noise_tex = SubResource("NoiseTexture2D_3je14")
shader_parameter/dissolve_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n32rj"]
atlas = ExtResource("3_nd4ig")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1dnm"]
atlas = ExtResource("3_nd4ig")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl7v0"]
atlas = ExtResource("3_nd4ig")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbli7"]
atlas = ExtResource("3_nd4ig")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqhfm"]
atlas = ExtResource("3_nd4ig")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt2fi"]
atlas = ExtResource("3_nd4ig")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7e3f"]
atlas = ExtResource("3_nd4ig")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5uwl"]
atlas = ExtResource("3_nd4ig")
region = Rect2(700, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_34deo"]
atlas = ExtResource("3_nd4ig")
region = Rect2(800, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qykqd"]
atlas = ExtResource("4_gecj3")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymct7"]
atlas = ExtResource("4_gecj3")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oimy"]
atlas = ExtResource("4_gecj3")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_857sl"]
atlas = ExtResource("4_gecj3")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeuos"]
atlas = ExtResource("4_gecj3")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf5b6"]
atlas = ExtResource("4_gecj3")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f41yo"]
atlas = ExtResource("4_gecj3")
region = Rect2(600, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nboxn"]
atlas = ExtResource("3_nd4ig")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjo5a"]
atlas = ExtResource("3_nd4ig")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ub7"]
atlas = ExtResource("3_nd4ig")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_73lfv"]
atlas = ExtResource("3_nd4ig")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_obv2i"]
atlas = ExtResource("3_nd4ig")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_paojo"]
atlas = ExtResource("3_nd4ig")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_04n5e"]
atlas = ExtResource("3_nd4ig")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih0ge"]
atlas = ExtResource("3_nd4ig")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqran"]
atlas = ExtResource("3_nd4ig")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucxhy"]
atlas = ExtResource("3_nd4ig")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_65ix0"]
atlas = ExtResource("3_nd4ig")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r12vd"]
atlas = ExtResource("3_nd4ig")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qciao"]
atlas = ExtResource("3_nd4ig")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1nye"]
atlas = ExtResource("3_nd4ig")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct3wp"]
atlas = ExtResource("3_nd4ig")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm8tu"]
atlas = ExtResource("3_nd4ig")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2i3m"]
atlas = ExtResource("3_nd4ig")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0bfr"]
atlas = ExtResource("3_nd4ig")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_e3bcf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n32rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1dnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl7v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbli7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqhfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt2fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7e3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5uwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34deo")
}],
"loop": false,
"name": &"attack-1",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qykqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymct7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oimy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_857sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeuos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf5b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f41yo")
}],
"loop": false,
"name": &"attack-2",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nboxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjo5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ub7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73lfv")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obv2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paojo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04n5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih0ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqran")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucxhy")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65ix0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r12vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qciao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1nye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct3wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm8tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2i3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0bfr")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4qae2"]
atlas = ExtResource("5_2yfd0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1telt"]
atlas = ExtResource("6_ex5m4")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qyts"]
atlas = ExtResource("6_ex5m4")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_032lo"]
atlas = ExtResource("6_ex5m4")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bev0"]
atlas = ExtResource("6_ex5m4")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gcy2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qae2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1telt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qyts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_032lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bev0")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8l058"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvx2j"]
radius = 9.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hwy0"]
size = Vector2(160, 16)

[sub_resource type="Gradient" id="Gradient_hn8e4"]
offsets = PackedFloat32Array(0, 0.19178082, 1)
colors = PackedColorArray(0.6431373, 0.6431373, 0.6431373, 1, 0.5726565, 0.5726565, 0.5726565, 0.89041096, 0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_xhj3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/whiteness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/dissolve_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.5370987, 0.5370987, 0.5370987, 0.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Areas/CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3je14"]
resource_name = "die"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.5370987, 0.5370987, 0.5370987, 0.6), Color(0.5370987, 0.5370987, 0.5370987, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Areas/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_hn8e4"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/whiteness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhj3x"]
_data = {
&"RESET": SubResource("Animation_xhj3x"),
&"die": SubResource("Animation_3je14"),
&"hit": SubResource("Animation_hn8e4")
}

[sub_resource type="Animation" id="Animation_g2p5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Areas/Hits/attack-1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Areas/Hits/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cvx2j"]
resource_name = "attack-1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Areas/Hits/attack-1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_tj6wx"]
resource_name = "attack-2"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Areas/Hits/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nddp"]
_data = {
&"RESET": SubResource("Animation_g2p5r"),
&"attack-1": SubResource("Animation_cvx2j"),
&"attack-2": SubResource("Animation_tj6wx")
}

[node name="SkeletonArcher" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_p5226")
collision_layer = 0
script = ExtResource("2_183pt")
speed = 50
arrowScene = ExtResource("7_183pt")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_e3bcf")
animation = &"attack-1"
autoplay = "idle"
frame = 8
frame_progress = 1.0

[node name="Shadow" type="AnimatedSprite2D" parent="."]
modulate = Color(0.5370987, 0.5370987, 0.5370987, 0.6)
z_index = -1
sprite_frames = SubResource("SpriteFrames_2gcy2")
animation = &"die"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 6)
shape = SubResource("CircleShape2D_8l058")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_cvx2j")

[node name="Areas" type="Node2D" parent="."]

[node name="Hits" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 2

[node name="attack-1" type="CollisionPolygon2D" parent="Areas/Hits"]
visible = false
polygon = PackedVector2Array(3, 9, 19, 7, 24, -1, 25, -13, 12, -19, 3, -17, 1, -12, 9, -10, 9, -2, 2.3796387, 2.4862213)
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Areas/Hits"]
visible = false
polygon = PackedVector2Array(9, -4, 22, -2, 33, 6, 28, 11, 20, 15, -5, 14, -17, 5, -12, 0, -6, 6, 8, 3, 4, 0)
disabled = true

[node name="Checks" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 2

[node name="attack-1" type="CollisionShape2D" parent="Areas/Checks"]
position = Vector2(93, 0)
shape = SubResource("RectangleShape2D_4hwy0")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Areas"]
position = Vector2(2, 4)
emitting = false
emission_shape = 3
emission_rect_extents = Vector2(8.195, 3.08)
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, 1)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
color_ramp = SubResource("Gradient_hn8e4")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="Hit" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xhj3x")
}
speed_scale = 1.5

[node name="Attack" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5nddp")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="Areas/Checks" to="." method="_on_checks_area_entered"]
[connection signal="area_exited" from="Areas/Checks" to="." method="_on_checks_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
